# tts-api

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: API.md  SETUP.md  qiita.md
scripts/: com.jyukipann.tts-api.plist
src/tts_api/: app.py  audio.py  model.py  settings.py  stt.py
src/tts_api/templates/: index.html
