[project]
name = "tts-api"
version = "0.1.0"
description = "Qwen3-TTS voice-clone FastAPI (Mac/MPS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "qwen-tts>=0.0.5,<0.1",
  "soundfile>=0.12",
  "uvicorn[standard]>=0.27",
  "mlx-whisper>=0.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_api"]

[tool.hatch.build]
include = ["src/tts_api/templates/*.html"]

[tool.ruff]
line-length = 100
